Version 2.1.201
    (API) TNT is set as the source in Blast Mining (1.16.1 and up)
    Fixed an exploit related to Ability Buffs remaining on tools
    Blast Mining no longer drops Budding Amethyst since its not legal to obtain this item through normal gameplay
    Added mcinspect and mmoinspect aliases to inspect command
    Portuguese translation of Woodcutting changed back to Lenhador
    Updated zh_CN (Chinese) locale, thanks GhostDC!
    Major changes to zh_TW locale, thanks gregman98
    Added '/skill keep' shortcut (for example /mining keep) thanks GriffinCodes
    Impact is now more balanced as the formula has been changed (see notes) thanks emanondev

    NOTES:
    Impact will deal less durability damage to armors without unbreaking, and more to armors with unbreaking

Version 2.1.200
    Fixed a major 1.17 exploit
    Dodge will no longer trigger while blocking
    Action Bar messages can now be disabled (thanks TheBusyBiscuit)
    mcMMO is better at MC version parsing now (thanks stepech & TheBusyBiscuit)

Version 2.1.199
    Fixed IndexOutOfBounds error for servers running 1.17 or higher
    Fixed a bug that caused MySQL/MariaDB to malfunction for 1.17 (see notes)
    Renamed Deepslate Lapis Lazuli Ore to Deepslate Lapis Ore in experience.yml and config.yml
    Added some code to prevent mcMMO from breaking if it doesn't recognize the version of the game
    Optimized CompatibilitySupportLayer - this handles some of the logic for supporting multiple versions of the game
    Added Unit Tests for MinecraftGameVersion

    NOTES:
    I have temporarily disabled SSL for MySQL/MariaDB for 1.17 ( proper fix coming soon )

Version 2.1.198
    Fixed a bug where Smelting didn't work with the new 1.17 materials
    Updated dependency Adventure to 4.8.0 (thanks TheBusyBiscuit)

Version 2.1.197
    This update adds compatibility for new mobs and blocks from 1.17
    This build of mcMMO should be more compatible with certain versions of ViaVersion