@@ -1,4 +1,5 @@
 Version 2.1.201
+    Tweaked the visual/audio effect for Rupture
     (API) TNT is set as the source in Blast Mining (1.16.1 and up)
     Fixed an exploit related to Ability Buffs remaining on tools
     Blast Mining no longer drops Budding Amethyst since its not legal to obtain this item through normal gameplay
